emergency back up 1

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,28 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello there!\n",
-      "My name is Phuad. \n",
-      " Welcome to my PCP assignment demonstration\n",
-      "\u001b[0;36;mThere are two data categories available for analysis, namely musical and genre data.\u001b[0m\n",
-      "\n",
-      "\n",
-      "What is your name ¿\n",
-      "Hello, Anon!\n",
-      "What would you like to do? \n",
-      " Options: \n",
-      "  1. Analyze  \t  \u001b[1;31m  \n",
-      " Press any other key to Quit\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Hello there!\")\n",
     "print(\"My name is Phuad. \\n Welcome to my PCP assignment demonstration\")\n",
@@ -58,65 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "What would you like to analyze? \n",
-      " Options: \n",
-      "  1. Musical Data  \t  2. Genre Data \u001b[1;31m  \n",
-      " Press any other key to Quit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/tsumizu/Desktop/python/Solution/pcp_code v2/DATA_WRANGLER.py:13: DtypeWarning: Columns (12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  return pd.read_csv(self.file_path)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1;33mAvailable options for analysis:\u001b[0m\n",
-      "1. Summary of the data \n",
-      " 2. Analysis of a specific feature \n",
-      " 3. Correlation table  \u001b[1;31m  \n",
-      " Press any other key to Quit\u001b[0m\n",
-      "\n",
-      "\u001b[1;33mAnalysis of a specific feature:\u001b[0m\n",
-      "Features to analyze are : \n",
-      "\n",
-      "1. Valence \t 2. Year \n",
-      " 3. Acousticness \t 4. Artist \n",
-      " 5. Danceability \t 6. Duration_ms \n",
-      " 7. Energy \t 8. Explicit \n",
-      " 9. Id \t 10. Instrumentalness \n",
-      " 11. Key \t 12. Liveness \n",
-      " 13. Loudness \t 14. Mode \n",
-      " 15. Name \t 16. Popularity \n",
-      " 17. Release_date \t 18. Speechiness \n",
-      " 19. Tempo\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'EDA' object has no attribute 'get_feature_analysis'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 37\u001b[0m\n\u001b[1;32m     34\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1. Model \u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m 2. Genre \u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m 3. Acousticness \u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m 4. Dancability \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m , 5. Duration_ms \u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m 6. Energy \u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m 7. Instrumentalness \u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m 8. Liveness \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m 9. Loudness \u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m 10. Speechiness \u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m 11. Tempo \u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m 12. Valence \u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m 13. Popularity \u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m 14. Key\u001b[39m\u001b[38;5;124m\"\u001b[39m)  \n\u001b[1;32m     36\u001b[0m     feature \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter the feature you\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124md like to analyze: \u001b[39m\u001b[38;5;124m\"\u001b[39m)          \n\u001b[0;32m---> 37\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[43meda\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_feature_analysis\u001b[49m(feature)) \n\u001b[1;32m     38\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m option \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m3\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m     39\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\033\u001b[39;00m\u001b[38;5;124m[1;33mCorrelation table:\u001b[39m\u001b[38;5;130;01m\\033\u001b[39;00m\u001b[38;5;124m[0m\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'EDA' object has no attribute 'get_feature_analysis'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if analyze == \"1\":\n",
     "\n",
@@ -257,7 +182,127 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import RANKING as ranking\n",
+    "import pandas as pd "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../data/data.csv')\n",
+    "df.columns[8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df =  DW.DATA_WRANGLER('../data/data.csv')\n",
+    "df = df.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rank = ranking.RANKING(df, \"danceability\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rank.optimize_k_means(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1: Normalize the data\n",
+    "scaler = StandardScaler()\n",
+    "df = pd.read_csv(\"../data/data.csv\")\n",
+    "data = df.drop(columns=[\"artists\", \"name\", \"id\", \"loudness\", \"release_date\"])\n",
+    "data_normalized = scaler.fit_transform(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1: Normalize the data\n",
+    "scaler = StandardScaler()\n",
+    "data_normalized = scaler.fit_transform(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2: Apply K-means\n",
+    "kmeans = KMeans(n_clusters=7, random_state=42)  # Set k=2\n",
+    "kmeans.fit(data_normalized)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 3: Get cluster assignments and centroids\n",
+    "clusters = kmeans.labels_\n",
+    "centroids = kmeans.cluster_centers_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 4: Visualize (for 2D data)\n",
+    "plt.scatter(data_normalized[:, 0], data_normalized[:, 1], c=clusters, cmap='viridis')\n",
+    "plt.scatter(centroids[:, 0], centroids[:, 1], color='red', marker='x')  # Centroids\n",
+    "plt.title('K-means Clustering')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
