--- a/main.ipynb
+++ b/main.ipynb
@@ -2,12 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import DATA_WRANGLER as DW\n",
-    "import DSA as EDA"
+    "import DATA_WRANGLER as dw\n",
+    "import DSA as dsa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/tsumizu/Desktop/python/Solution/pcp_code_v2/DATA_WRANGLER.py:14: DtypeWarning: Columns (12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  return pd.read_csv(self.file_path)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_wrangler = dw.DATA_WRANGLER(\"../data/data.csv\")\n",
+    "data = data_wrangler.load_data()\n",
+    "df = data_wrangler.coerce_mixed_columns(data)\n"
    ]
   },
   {
@@ -33,8 +53,7 @@
     "# The user chooses to analyze or quit (Prompt)\n",
     "print(\"What would you like to do? \\n Options: \\n  1. Analyze  \\t  \\033[1;31m  \\n Press any other key to Quit\\033[0m\")\n",
     "analyze = input(\" 1. Analyze  Press any other key to quit\")\n",
-    "\n",
-    "# If the user chooses to analyze, the program will continue"
+    "\n"
    ]
   },
   {
@@ -43,6 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# If the user chooses to analyze, the program will continue\n",
     "if analyze == \"1\":\n",
     "\n",
     "    print(\"What would you like to analyze? \\n Options: \\n  1. Musical Data  \\t  2. Genre Data \\033[1;31m  \\n Press any other key to Quit\\033[0m\")\n",
@@ -59,9 +79,10 @@
     "        exit()\n",
     "    \n",
     "    # Initialize data wrangling class with the provided file path\n",
-    "    data = DW.DATA_WRANGLER(file_path)\n",
-    "    df = data.load_data()\n",
-    "    eda = EDA.DSA(df)\n",
+    "    data = dw.DATA_WRANGLER(file_path)\n",
+    "    data = data.load_data()\n",
+    "    df = data_wrangler.coerce_mixed_columns(data)\n",
+    "    eda = dsa.DSA(df)\n",
     "    \n",
     "    print(\"\\n\\033[1;33mAvailable options for analysis:\\033[0m\")\n",
     "    print(\"1. Summary of the data \\n2. Descriptive Statistical Analysis \\n3. Correlation table  \\033[1;31m  \\n Press any other key to Quit\\033[0m\")\n",
@@ -167,141 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "if analyze == \"1\":\n",
-    "   \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    # Next we will ask the user to select an option for analysis and expan on them. \n",
-    "    eda.plot_corrolation_table([\"artists\",\"id\",\"name\",\"loudness\",\"release_date\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install pandas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import RANKING as ranking\n",
-    "import pandas as pd "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('../data/data.csv')\n",
-    "df.columns[8]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df =  DW.DATA_WRANGLER('../data/data.csv')\n",
-    "df = df.load_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rank = ranking.RANKING(df, \"danceability\")    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rank.optimize_k_means(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.cluster import KMeans\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 1: Normalize the data\n",
-    "scaler = StandardScaler()\n",
-    "df = pd.read_csv(\"../data/data.csv\")\n",
-    "data = df.drop(columns=[\"artists\", \"name\", \"id\", \"loudness\", \"release_date\"])\n",
-    "data_normalized = scaler.fit_transform(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 1: Normalize the data\n",
-    "scaler = StandardScaler()\n",
-    "data_normalized = scaler.fit_transform(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 2: Apply K-means\n",
-    "kmeans = KMeans(n_clusters=7, random_state=42)  # Set k=2\n",
-    "kmeans.fit(data_normalized)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 3: Get cluster assignments and centroids\n",
-    "clusters = kmeans.labels_\n",
-    "centroids = kmeans.cluster_centers_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 4: Visualize (for 2D data)\n",
-    "plt.scatter(data_normalized[:, 0], data_normalized[:, 1], c=clusters, cmap='viridis')\n",
-    "plt.scatter(centroids[:, 0], centroids[:, 1], color='red', marker='x')  # Centroids\n",
-    "plt.title('K-means Clustering')\n",
-    "plt.show()"
+    "\n"
    ]
   }
  ],
